profil review and update

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <A:link>Abdou Malick</A:link>
           </span>
         </h1>
-        <p class="hero-subtitle">Développeur Web passionné</p>
+        <p class="hero-subtitle">Développeur en devenir</p>
         <p class="hero-description">
           Je crée des sites web modernes, interactifs et responsive.
           Découvrez mes projets et compétences ci-dessous.
@@ -308,8 +308,8 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <p class="footer-text">Designed by Abdou Malick ASSOUMA with HTML, CSS and JavaScript</p>
-      <p class="footer-text">All rights reserved 2026</p>
+      <p class="footer-text">Designed by Abdou Malick ASSOUMA with HTML, CSS and JavaScript.</p>
+      <p class="footer-text">All rights reserved 2026.</p>
     </div>
   </footer>
 
