--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <span class="tag">#css</span>
               <span class="tag">#js</span>
             </div>
-            <a href="#" class="btn btn-small">Voir</a>
+            <a href="index.html" class="btn btn-small">Voir</a>
           </div>
         </article>
 
@@ -169,7 +169,7 @@
               <span class="tag">#css</span>
               <span class="tag">#js</span>
             </div>
-            <a href="calculateur.html" class="btn btn-small">Voir</a>
+            <a href="calculateur.html" target="_blank" class="btn btn-small">Voir</a>
           </div>
         </article>
 
@@ -179,16 +179,17 @@
             <img src="images/projet3.png" alt="Projet Application Web">
           </div>
           <div class="project-content">
-            <h3 class="project-title">Application Web</h3>
+            <h3 class="project-title">KPPAY</h3>
             <p class="project-description">
-              Une application interactive avec fonctionnalités avancées.
+              Une plateforme de transaction financière en ligne sécurisée.
             </p>
             <div class="project-tags">
-              <span class="tag">#html</span>
-              <span class="tag">#css</span>
+              <span class="tag">#php</span>
+              <span class="tag">#laravel</span>
               <span class="tag">#js</span>
+              <span class="tag">#tailwindCSS</span>
             </div>
-            <a href="#" class="btn btn-small">Voir</a>
+            <a href="https://kppay.co/" target="_blank" class="btn btn-small">Voir</a>
           </div>
         </article>
       </div>
